--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,5 +15,5 @@ jobs:
               env:
                   ACCESS_TOKEN: ${{ 2ea33a5ab641f97bfb39e8dfa03ab07765805ee8 }}
                   BRANCH: master
-                  FOLDER: .vuepress/dist
-                  BUILD_SCRIPT:yarn install && yarn run docs:build
+                  FOLDER: docs/.vuepress/dist
+                  BUILD_SCRIPT: yarn install && yarn run docs:build
