--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
             - name: Build and Deploy
               uses: yiluhukai/github-pages-deploy-action@gh-pages
               env:
-                  ACCESS_TOKEN: ${{ 2ea33a5ab641f97bfb39e8dfa03ab07765805ee8 }}
+                  ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
                   BRANCH: master
                   FOLDER: docs/.vuepress/dist
                   BUILD_SCRIPT: yarn install && yarn run docs:build
