--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,10 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
-              uses: actions/checkout@gh-pages
+              uses: actions/checkout@master
 
             - name: Build and Deploy
-              uses: yiluhukai/github-pages-deploy-action@gh-pages
+              uses: JamesIves/github-pages-deploy-action@master
               env:
                   ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
                   BRANCH: master
