--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
             - name: Build and Deploy
               uses: JamesIves/github-pages-deploy-action@master
               env:
-                  ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+                  ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN}}
                   BRANCH: master
                   FOLDER: docs/.vuepress/dist
                   BUILD_SCRIPT: yarn install && yarn run docs:build
