--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,18 +2,18 @@ name: GitHub Actions Build and Deploy Demo
 on:
     push:
         branches:
-            - gh-pages
+            - master
 jobs:
     build-and-deploy:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
-              uses: actions/checkout@gh-pages
+              uses: actions/checkout@v2
 
             - name: Build and Deploy
-              uses: yiluhukai/yiluhukai.github.io@gh-pages
+              uses: JamesIves/github-pages-deploy-action@master
               env:
                   ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN}}
-                  BRANCH: master
+                  BRANCH: gh-pages
                   FOLDER: docs/.vuepress/dist
                   BUILD_SCRIPT: yarn install && yarn run docs:build
