--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@vuepress/plugin-active-header-links": "^1.7.1",
-		"vuepress": "^1.7.1",
-		"vuepress-plugin-autobar": "boboidream/vuepress-bar"
+		"vuepress": "^1.7.1"
 	},
 	"scripts": {
 		"docs:dev": "vuepress dev docs",
