--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build and Deploy
-        uses: JamesIves/github-pages-deploy-action
+        uses: yiluhukai/yiluhukai.github.io@master
         env:
           ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN}}
           BRANCH: gh-pages
