--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -10,7 +10,7 @@ jobs:
       - name: vuepress-deploy
         uses: jenkey2011/vuepress-deploy@master
         env:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          ACCESS_TOKEN: ${{ secrets.MY_BLOG }}
           TARGET_REPO: yiluhukai/yiluhukai.github.io
           TARGET_BRANCH: gh_pages
           BUILD_SCRIPT: yarn && yarn docs:build
